Fixed: Filter Preferences: Filter tooltip is being cut off

--- a/chrome/skin/filters.css
+++ b/chrome/skin/filters.css
@@ -80,6 +80,11 @@ splitter
   border-width: 0px !important;
 }
 
+#filtersTooltip
+{
+  max-width: none;
+}
+
 .tooltipLabel
 {
   font-weight: bold;
